Fix hover visibility of collapse menu toggle in light mode

--- a/css/style.css
+++ b/css/style.css
@@ -1405,4 +1405,9 @@ body.signup-page-body {
     border: none !important;
 }
 
+#sidebar-collapse-toggle:hover {
+    background-color: var(--primary-color) !important;
+    color: #FFFFFF !important;
+}
+
 
